# cowsay-bot

./: .gitignore  Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs
src/: main.rs
src/commands/: cowsay.rs  explode.rs  fortune.rs  mod.rs  set_channel.rs
src/db/: mod.rs
src/utils/: cowsay.rs  fortune.rs  mod.rs
