[package]
name = "cowsay-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sys-info = "0.9.1"
rand = "0.8.5"

macros = { path = "./macros" }

[dependencies.bonsaidb]
features = ["local"]
version = "0.5.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.201"

[dependencies.chrono]
default-features = false
features = ["clock"]
version = "0.4.38"

[dependencies.tokio]
features = ["macros", "signal", "rt-multi-thread"]
version = "1.37.0"

[dependencies.serenity]
features = [
  "cache",
  "framework",
  "standard_framework",
  "rustls_backend",
  "client",
  "gateway",
  "model",
  "collector",
  "builder",
]
version = "0.12.1"

[dependencies.poise]
# features = ["builder"]
version = "0.6.1"
